/*
 * $Id: ChangeLog,v 1.6233 2008/10/22 08:32:32 marchuet Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2008-10-22 13:52 UTC+0100 Miguel Angel Marchuet <miguelangel@marchuet.net>
  * include\classes.h
  * source\vm\classes.c
  * source\vm\dynsym.c
    - ulCalls and others are removed #ifndef HB_NO_PROFILER
      thks to Enrico Maria Giordano

2008-10-22 10:30 UTC+0100 Miguel Angel Marchuet <miguelangel@marchuet.net>
  * include\thread.h
    + added stackrdd at thread temporally, I'm thinking about the best way to implement
      public wa and private thread too simultaneusly. If any body can help me.

  * source\rdd\hbsix\sxcompr.c
    ! fixed ring buffer initialization in Sx_Compress()

  * source\rdd\nulsys\nulsys.c
    ! Added DBSELECTAREA(), DBSTRUCT(), HEADER(),
      RECSIZE(), LUPDATE()
      so that programs can be built with -b and
      hbnulrdd.lib. hbdebug.lib/dgbwa.prg uses
      symbols above.

  * source\rdd\dbcmd.c
  * source\rdd\dbf1.c
    ! added workaround for problem with EVAL block used in PACK
      command

  * source\rdd\sdf1.c
    ! fixed stupid typo (missing !) in last modification which broke
      SDF RDD read mode. Thanks to Marco for information and example.

  * source\vm\fm.c
    * changed hb_xrealloc() to be ANSI-C realloc() compatible. it make alloc
      when null pointer arrive with len parameter informed.

  * source\vm\estack.c
    + added hb_stackRDD( void )

  * source\vm\errorapi.c
    * changed hb_errLaunch( PHB_ITEM pError ) because we need to retorn to code
      to release items in some cases, or continue.
      Posible we need the same at hb_errLaunchSubst( PHB_ITEM pError ) or similar.

  * source\vm\dynsym.c
    - removed uneeded #include "thread.h" because is included yet at #include "hbstack.h"

  * common.mak
  * compile.mak
  + source\rtl\filebuf.c