@@ -1,5 +1,5 @@
 /*
- * $Id: wacore.c,v 1.10 2008/09/05 08:38:36 marchuet Exp $
+ * $Id: wacore.c,v 1.11 2008/10/22 08:32:48 marchuet Exp $
  */
 
 /*
@@ -64,25 +64,14 @@
 #include "hbstack.h"
 
 /* Default RDD name */
-
-static USHORT s_uiWaMax = 0;           /* Number of allocated WA */
-static USHORT s_uiWaSpace = 0;         /* Number of allocated WA */
-
-static USHORT * s_WaNums = NULL;       /* Allocated WorkAreas */
 static USHORT s_uiWaNumMax = 0;        /* Number of allocated WA */
 
 #ifndef HB_THREAD_SUPPORT
-static USHORT s_uiCurrArea = 1;        /* Current WokrArea number */
-static AREAP  s_pCurrArea = NULL;      /* Current WorkArea pointer */
-static BOOL   s_fNetError = FALSE;     /* Error on Networked environments */
    #define LOCK_AREA
    #define UNLOCK_AREA
    #define LOCK_AREA_INIT
    #define LOCK_AREA_DESTROY
 #else
-   #define s_uiCurrArea    HB_VM_STACK.uiCurrArea
-   #define s_pCurrArea     HB_VM_STACK.pCurrArea
-   #define s_fNetError     HB_VM_STACK.fNetError
    HB_CRITICAL_T  s_mtxWorkArea;
    #if defined (HB_OS_WIN_32) || defined(HB_OS_OS2)
       static BOOL s_fMtLockInit = FALSE;
